--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Tapp Studios</title>
     </head>
     <body>
+        <h1 style="background-color:DodgerBlue;">Hello World</h1>
+        <p style="background-color:Tomato;">Lorem ipsum...</p>
         <p>This is an example of a simple HTML page with one paragraph.</p>
         <p>This is also a paragraph.</p>
     </body>
