--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
     <head>
         <title>Tapp Studios</title>
     </head>
-    <body>
+    <body style="background-color:aquamarine;">
         <h1 style="background-color:DodgerBlue;">Hello World</h1>
-        <p style="background-color:Tomato;">Lorem ipsum...</p>
         <p>This is an example of a simple HTML page with one paragraph.</p>
         <p>This is also a paragraph.</p>
     </body>
