--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Tapp Studios</title>
     </head>
     <body style="background-color:aquamarine;">
-        <h1 style="background-color:DodgerBlue;">Hello World</h1>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
-        <p>This is also a paragraph.</p>
+        <h1 style="background-color:DodgerBlue;","font-family:'Courier New'">Hello World</h1>
+        <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
+        <p style="font-family:'Courier New'">This is also a paragraph.</p>
     </body>
 </html>
