--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1 style="background-color:DodgerBlue; font-family:'Courier New'">Hello World</h1>
         <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
         <p style="font-family:'Courier New'">This is also a paragraph.</p>
+        <area shape="rect" coords="0,0,82,126" href="sun.htm" alt="Sun">
     </body>
 </html>
