--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Tapp Studios</title>
     </head>
     <body style="background-color:aquamarine;">
-        <img src="logo.png" alt="picture">
+        <img src="logo.png" alt="picture" style="width:500px;height:600px;">
         <h1 style="background-color:DodgerBlue; font-family:'Courier New'">Hello World</h1>
         <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
         <p style="font-family:'Courier New'">This is also a paragraph.</p>
