--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body style="background-color:aquamarine;">
         <img src="logo.png" alt="picture" style="width:100px;height:100px;">
-        <h1 style="background-color:DodgerBlue; font-family:'Courier New'">Hello World</h1>
+        <h1 style="background-color:DodgerBlue; font-family:'Courier New' align="left"">Hello World</h1>
         <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
         <p style="font-family:'Courier New'">This is also a paragraph.</p>
     </body>
