--- a/index.html
+++ b/index.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tapp Studios</title>
-    </head>
+    <title>Tapp Studios</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+header {
+  background-color: #666;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
+}
+
+/* Container for flexboxes */
+section {
+  display: -webkit-flex;
+  display: flex;
+}
+
+/* Style the navigation menu */
+nav {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  background: #ccc;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+/* Style the content */
+article {
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
+  background-color: #f1f1f1;
+  padding: 10px;
+}
+
+/* Style the footer */
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
+@media (max-width: 600px) {
+  section {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+}
+</style>
+</head>
     <body style="background-color:aquamarine;">
         <img src="logo.png" alt="picture" style="width:100px;height:100px;">
-        <h1 style="background-color:DodgerBlue; font-family:'Courier New'">Hello World</h1>
-        <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
-        <p style="font-family:'Courier New'">This is also a paragraph.</p>
-    </body>
+<header>
+<h2 style="font-family:'Courier New'">Tapp Studios</h2>
+</header>
+<article>
+    <h1>Sub header</h1>
+    <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
+    <p style="font-family:'Courier New'">This is also a paragraph.</p>
+</article>
+</body>
 </html>
