--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ footer {
 </head>
     <body style="background-color:#666;">
 <div class="header">
-  <img src="img/logo.png"/>
+  <img src="logo.png"/>
   <h2 style="font-family:'Courier New'">Tapp Studios</h2>
 </div>
 <article>
