--- a/index.html
+++ b/index.html
@@ -86,13 +86,20 @@ footer {
 </head>
     <body style="background-color:#666;">
 <div class="header">
-  <img src="logo.png"/>
+  <img src="img/logo.png"/>
   <h2 style="font-family:'Courier New'">Tapp Studios</h2>
 </div>
+<section>
+<nav>
+    <ul>
+      <li style="font-family:'Courier New'" align="center"><a href="#">Home</a></li>
+    </ul>
+</nav>
 <article>
     <h1>Sub header</h1>
     <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
     <p style="font-family:'Courier New'">This is also a paragraph.</p>
 </article>
+</section>
 </body>
 </html>
