--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@ footer {
 }
 </style>
 </head>
-    <body style="background-color:#666;">
+<body style="background-color:#666;">
 <div class="header">
-  <img src="img/logo.png"/>
+  <img src="logo.png"/>
   <h2 style="font-family:'Courier New'">Tapp Studios</h2>
 </div>
 <section>
