--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ footer {
 <nav>
     <ul>
       <li style="font-family:'Courier New'" align="center"><a href="#">Home</a></li>
+      <li style="font-family:'Courier New'" align="center"><a href="page.html">Page</a></li>
     </ul>
 </nav>
 <article>
