--- a/page.html
+++ b/page.html
@@ -83,25 +83,25 @@ footer {
   }
 }
 a:link {
-  color: green;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: pink;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:hover {
-  color: red;
+  color: grey;
   background-color: transparent;
   text-decoration: underline;
 }
 
 a:active {
-  color: yellow;
+  color: grey;
   background-color: transparent;
   text-decoration: underline;
 }
