--- a/page.html
+++ b/page.html
@@ -121,8 +121,8 @@ a:active {
 </nav>
 <article>
     <h1>Sub header</h1>
-    <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
-    <p style="font-family:'Courier New'">This is also a paragraph.</p>
+    <p style="font-family:'Courier New'">This is another HTML page.</p>
+    <p style="font-family:'Courier New'">This is one paragraph.</p>
 </article>
 </section>
 </body>
