--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@ a:active {
     <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
     <p style="font-family:'Courier New'">This is also a paragraph.</p>
 </article>
+<footer>
+<h1>Footer</h1>
+<p style="font-family:'Courier New'">here we have an example paragraph as a footer</p>
+</footer>
 </section>
 </body>
 </html>
