--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ a:active {
 <body style="background-color:#666;">
 <div class="header">
   <img src="logo.png"/>
-  <h2 style="font-family:'Courier New'">Tapp Studios</h2>
+  <h2 style="font-family:'Courier New' align:'left'">Tapp Studios</h2>
 </div>
 <section>
 <nav>
