--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@ a:active {
 </head>
 <body style="background-color:#666;">
 <div class="header">
-  <img src="logo.png"/>
-  <h2 style="font-family:'Courier New' align:'left'">Tapp Studios</h2>
+    <li>
+    <div style="float: left;">
+        <img src="logo.png">
+    </div>
+    </li>
+    <h2 style="font-family:'Courier New'" align:"left">Tapp Studios</h2>
 </div>
 <section>
 <nav>
