--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ a:active {
 </section>
 <footer>
 <h1>Footer</h1>
-<p style="font-family:'Courier New'">here we have an example paragraph</p>
+<p style="font-family:'Courier New'">here we have an example  of a paragraph</p>
 </footer>
 </body>
 </html>
