--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@ a:active {
 <article>
     <h1>Sub header</h1>
     <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
-    <p style="font-family:'Courier New'">This is also a paragraph.</p>
+    <p style="font-family:'Courier New'">This is a second paragraph.</p>
+    <p style="font-family:'Courier New'"></p>
 </article>
 </section>
 <footer>
