--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ article {
 footer {
   background-color: #777;
   padding: 10px;
-  text-align: center;
+  text-align: left;
   color: white;
 }
 
@@ -122,11 +122,10 @@ a:active {
     </ul>
 </nav>
 <article>
-    <h1>Sub header</h1>
+    <h1 style="font-family:'Courier New'">Sub header</h1>
     <br></br>
     <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
     <p style="font-family:'Courier New'">This is a second paragraph.</p>
-    <br></br>
 </article>
 </section>
 <footer>
