--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ article {
 /* Style the footer */
 footer {
   background-color: #777;
-  padding: 10px;
+  padding: 20px;
   text-align: left;
   color: white;
 }
@@ -129,8 +129,8 @@ a:active {
 </article>
 </section>
 <footer>
-<h1>    Footer</h1>
-<p style="font-family:'Courier New'">here we have an example  of a paragraph</p>
+<h1>Footer</h1>
+<p style="font-family:'Courier New'">here we have an example of a footer</p>
 </footer>
 </body>
 </html>
