--- a/page.html
+++ b/page.html
@@ -55,7 +55,7 @@ article {
 /* Style the footer */
 footer {
   background-color: #777;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
   color: white;
 }
@@ -120,7 +120,8 @@ a:active {
     </ul>
 </nav>
 <article>
-    <h1>Sub header</h1>
+    <h1 style="font-family:'Courier New'">Sub header</h1>
+    <br></br>
     <p style="font-family:'Courier New'">This is another HTML page.</p>
     <p style="font-family:'Courier New'">This is one paragraph.</p>
 </article>
