--- a/page.html
+++ b/page.html
@@ -4,109 +4,7 @@
     <title>Tapp Studios</title>
     <link rel="icon" type="image/x-icon" href="logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Style the header */
-header {
-  background-color: #666;
-  padding: 5px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
-
-/* Container for flexboxes */
-section {
-  display: -webkit-flex;
-  display: flex;
-}
-
-/* Style the navigation menu */
-nav {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  background: #ccc;
-  padding: 0px;
-}
-
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-/* Style the content */
-article {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  background-color: #f1f1f1;
-  padding: 10px;
-}
-
-/* Style the footer */
-footer {
-  background-color: #777;
-  padding: 20px;
-  text-align: center;
-  color: white;
-}
-
-.header img {
-  float: left;
-  width: 100px;
-  height: 100px;
-  /*background: #555;*/
-}
-
-.header h2 {
-  position: relative;
-  top: 10px;
-  left: 10px;
-  padding: 25px;
-  text-align: center;
-  font-size: 35px;
-  color: white;
-}
-/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
-@media (max-width: 600px) {
-  section {
-    -webkit-flex-direction: column;
-    flex-direction: column;
-  }
-}
-a:link {
-  color: black;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:visited {
-  color: black;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:hover {
-  color: grey;
-  background-color: transparent;
-  text-decoration: underline;
-}
-
-a:active {
-  color: grey;
-  background-color: transparent;
-  text-decoration: underline;
-}
-</style>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body style="background-color:#666;">
 <div class="header">
