--- a/Login.html
+++ b/Login.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="Style.css">
+    <title>Login - Tapp Studios</title>
+    <link rel="icon" type="image/x-icon" href="logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
 
-<h2>Login Form</h2>
+<h2>Tapp Studios</h2>
 
 <form action="/action_page.php" method="post">
   <div class="imgcontainer">
-    <img src="img_avatar2.png" alt="Avatar" class="avatar">
+    <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
   </div>
 
   <div class="container">
