--- a/page.html
+++ b/page.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style.css">
 </head>
-<body style="background-color:#666;">
+<body>
 <div class="header">
   <img src="logo.png"/>
   <h2 style="font-family:'Courier New'">Page</h2>
