--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="header">
     <img src="logo.png">
-    <h2 style="font-family:'Courier New'" align:"left">Tapp Studios</h2>
+    <h2>Tapp Studios</h2>
 </div>
 <section>
 <nav>
