--- a/Login.html
+++ b/Login.html
@@ -8,8 +8,10 @@
 </head>
 <body>
 
-<h2>Tapp Studios</h2>
-
+<div class="header">
+    <h2>Tapp Studios</h2>
+</div>
+    
 <form action="/action_page.php" method="post">
   <div class="container">
     <label for="uname"><b>Username</b></label>
