--- a/Login.html
+++ b/Login.html
@@ -12,7 +12,6 @@
     <h2>Tapp Studios</h2>
 </div>
     
-<form action="/action_page.php" method="post">
   <div class="container">
     <label for="uname"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
@@ -20,7 +19,7 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
         
-    <button type="submit">Login</button>
+    <button type="submit" onclick="login">Login</button>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Remember me
     </label>
