--- a/Register.html
+++ b/Register.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/x-icon" href="logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style.css">
+    <script src="Register.js"></script>
 </head>
 <body>
 
@@ -13,7 +14,7 @@
 </div>
     
   <div class="container">
-    <label for="uname"><b>Username</b></label>
+    <label for="uname" id="username"><b>Username</b></label>
     <input type="text" placeholder="Enter Username" name="uname" required>
 
     <label for="psw"><b>Password</b></label>
