--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <nav>
     <ul>
       <li style="font-family:'Courier New'" align="center"><a href="Login.html">Login</a></li>
+      <li style="font-family:'Courier New'" align="center"><a href="Register.html">Register</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="#">Home</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="page.html">Page</a></li>
     </ul>
