--- a/Register.html
+++ b/Register.html
@@ -21,7 +21,7 @@
     <input type="password" placeholder="Enter Password" name="psw" required>
 
     <label for="cpsw"><b>Confirm Password</b></label>
-    <input type="confirm password" placeholder="Confirm Password" name="cpsw" required>
+    <input type="password" placeholder="Confirm Password" name="cpsw" required>
         
     <button type="submit" onclick="signup">Sign Up</button>
     <label>
