--- a/Register.html
+++ b/Register.html
@@ -20,7 +20,7 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
-    <label for="cpsw"><b>Confirm Password</b></label>
+    <label for="psw"><b>Confirm Password</b></label>
     <input type="password" placeholder="Confirm Password" name="cpsw" required>
         
     <button type="submit" onclick="signup">Sign Up</button>
