Added JSON database

--- a/Register.html
+++ b/Register.html
@@ -32,6 +32,10 @@
     <button type="button" class="cancelbtn">Cancel</button>
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
+  <div class="container">
+    <input type="text" id="input">
+    <button type="button" id="submit">Compare</button>
+  </div>div>
 </form>
 
 </body>
