--- a/Register.html
+++ b/Register.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style.css">
     <script src="Register.js"></script>
+    <script>
+      window.onload = function() {
+        alert("This Works!");
+      };
+    </script>
 </head>
 <body>
 
