--- a/Register.html
+++ b/Register.html
@@ -9,22 +9,20 @@
     <script>
       window.onload = function() {
         alert("JS is being run");
-        async function compareInput() {
-          alert("JS is being called");
-          const input = document.getElementById("input").value;
-          const response = await fetch("Data.json");
-          const data = await response.json();
-          alert("JS is being called");
-          for (let i = 0; i < data.UserData.length; i++) {
-            if (data.UserData[i].Username === input) {
-              alert("Match found!");
-              return;
-            }
+        const input = document.getElementById("input").value;
+        alert("input found");
+        const response = fetch("Data.json");
+        alert("json fetched");
+        const data = response.json();
+        alert("JS is being called");
+        for (let i = 0; i < data.UserData.length; i++) {
+          if (data.UserData[i].Username === input) {
+            alert("Match found!");
+            return;
           }
-          alert("No match found.");
         }
-        document.getElementById("submit").addEventListener("click", compareInput);
-      };
+        alert("No match found.");
+      }
     </script>
 </head>
 <body>
