--- a/Login.html
+++ b/Login.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/x-icon" href="logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style.css">
+    <script src="Register.js"></script>
 </head>
 <body>
 
