--- a/Register.html
+++ b/Register.html
@@ -32,7 +32,7 @@
   </div>
 -->
   <div class="container">
-    <input type="text" id="input">
+    <input type="text" id="input" autocomplete="username" pattern="[a-zA-Z0-9_-]{4,10}">
     <button href="Register.js" type="button" onclick="compareInput()">Compare</button>
   </div>
 </body>
