Updated Webpage Layout

--- a/index.html
+++ b/index.html
@@ -27,9 +27,21 @@
     <p style="font-family:'Courier New'">This is a second paragraph.</p>
 </article>
 </section>
+<br>
+    <p>
+    </p>
+</br>
+<br>
+    <p>
+    </p>
+</br>
+<br>
+    <p>
+    </p>
+</br>
 <footer>
-<h1>Footer</h1>
-<p style="font-family:'Courier New'">here we have an example of a footer</p>
+<p>This is a fake website, so please treat it as such. DO NOT put in any information that you do not want publicly viewable. The creators of this website are not responsible for any breached data.</p>
+<p>Copyright © 2022-2023 Tapp Studios. Most Rights reserved.</p>
 </footer>
 </body>
 </html>
