--- a/Register.html
+++ b/Register.html
@@ -33,8 +33,9 @@
   </div>
 -->
   <div class="container">
-    <input type="text" id="input" autocomplete="username" pattern="[a-zA-Z0-9_-]{4,10}">
-    <button href="Register.js" type="button" onclick="compareInput()">Compare</button>
+    <input type="text" id="input" autocomplete="username" pattern="[a-zA-Z0-9_-]{4,10}" placeholder="Username">
+    <input type="text" id="input" autocomplete="username" pattern="[a-zA-Z0-9_-]{4,10}" placeholder="Password">
+    <button href="Register.js" type="button" onclick="compareInputs()">Compare</button>
   </div>
 </body>
 </html>
