--- a/Register.html
+++ b/Register.html
@@ -13,29 +13,10 @@
 <div class="header">
     <h2>Tapp Studios</h2>
 </div>
-<!---
-  <div class="container">
-    <label for="uname" id="username"><b>Username</b></label>
-    <input type="text" placeholder="Enter Username" name="uname" required>
-
-    <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
-
-    <label for="psw"><b>Confirm Password</b></label>
-    <input type="password" placeholder="Confirm Password" name="cpsw" required></label>      
-    <label>
-      <input type="checkbox" checked="checked" name="remember"> Remember me
-      <p id="demo"></p>
-    </label>
-  <div class="container">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
-  </div>
--->
   <div class="container">
     <input type="text" id="userin" autocomplete="username" pattern="[a-zA-Z0-9_-]{4,10}" placeholder="Username">
     <input type="text" id="passin" autocomplete="username" pattern="[a-zA-Z0-9_-]{4,10}" placeholder="Password">
-    <button href="Register.js" type="button" onclick="compareInputs()">Compare</button>
+    <button href="Register.js" type="button" onclick="compareInputs()">Submit</button>
   </div>
 </body>
 </html>
