--- a/Register.html
+++ b/Register.html
@@ -14,7 +14,7 @@
     <h2>Tapp Studios</h2>
 </div>
   <div class="container">
-    <input type="text" id="userin" autocomplete="username" pattern="[a-zA-Z0-9_-]{4,10}" placeholder="Username">
+    <input type="text" id="userin" autocomplete="username" pattern="[a-zA-Z0-9_-]{4,10}">
     <button href="Register.js" type="button" onclick="compareInputs()">Submit</button>
 </div>
 </body>
