--- a/Register.html
+++ b/Register.html
@@ -15,6 +15,7 @@
 </div>
   <div class="container">
     <input type="text" id="userin" autocomplete="username" pattern="[a-zA-Z0-9_-]{4,10}">
+    <input type="text" id="passin" autocomplete="username" pattern="[a-zA-Z0-9_-]{4,10}">
     <button href="Register.js" type="button" onclick="compareInputs()">Submit</button>
 </div>
 </body>
