--- a/page.html
+++ b/page.html
@@ -24,5 +24,22 @@
     <p style="font-family:'Courier New'">This is one paragraph.</p>
 </article>
 </section>
+<br>
+    <p>
+    </p>
+</br>
+<br>
+    <p>
+    </p>
+</br>
+<br>
+    <p>
+    </p>
+</br>
+<footer>
+<p>This is a fake website, so please treat it as such. DO NOT put in any information that you do not want publicly viewable. The creators of this website are not responsible for any breached data.</p>
+<br><pr></pr></br>
+<p>Copyright © 2022-2023 Tapp Studios. Most Rights reserved.</p>
+</footer>
 </body>
 </html>
