--- a/index.html
+++ b/index.html
@@ -32,30 +32,40 @@
     <p>
     </p>
 </br>
-<div id="deck">
-  <div><img src="Images/0001.jpg"></div>
-  <div><img src="Images/0003.jpg" /></div>
-  <div><img src="Images/Canyon.jpg" /></div>
-  <div><img src="Images/Converse.jpg" /></div>
-  <div><img src="Images/Space.jpg" /></div>
-  <div><img src="Images/Temple.jpg" /></div>
+<!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="0001.jpg" style="width:100%">
+    <div class="text">Caption Text</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="0003.jpg" style="width:100%">
+    <div class="text">Caption Two</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="Canyon.jpg" style="width:100%">
+    <div class="text">Caption Three</div>
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
+<br>
 
-
-// jQuery specific:
-// 1) remove elements from DOM and convert them into a native JavaScript array
-// 2) apply algorithm
-// 3) inject the array back to DOM
-
-var a = $("#deck > div").remove().toArray();
-for (var i = a.length - 1; i >= 1; i--) {
-    var j = Math.floor(Math.random() * (i + 1));
-    var bi = a[i];
-    var bj = a[j];
-    a[i] = bj;
-    a[j] = bi;
-}
-$("#deck").append(a);
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
 
 <br>
     <p>
