--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
-    <img src="0001.jpg" style="width:100%">
+    <img src="Images/0001.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="0003.jpg" style="width:100%">
+    <img src="Images/0003.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="Canyon.jpg" style="width:100%">
+    <img src="Images/Canyon.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
 
