--- a/index.html
+++ b/index.html
@@ -37,21 +37,33 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
+    <div class="numbertext">1 / 6</div>
     <img src="Images/0001.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
+    <div class="numbertext">2 / 6</div>
     <img src="Images/0003.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
+    <div class="numbertext">3 / 6</div>
     <img src="Images/Canyon.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
+  </div>
+   
+  <div class="mySlides fade">
+    <div class="numbertext">4 / 6</div>
+    <img src="Images/Converse.jpg" style="width:100%">
+  </div>
+    
+  <div class="mySlides fade">
+    <div class="numbertext">5 / 6</div>
+    <img src="Images/Space.jpg" style="width:100%">
+  </div>
+    
+  <div class="mySlides fade">
+    <div class="numbertext">6 / 6</div>
+    <img src="Images/Temple.jpg" style="width:100%">
   </div>
 
   <!-- Next and previous buttons -->
@@ -65,6 +77,9 @@
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+  <span class="dot" onclick="currentSlide(5)"></span>
+  <span class="dot" onclick="currentSlide(6)"></span>
 </div>
 <script>
 let slideIndex = 0;
@@ -84,7 +99,7 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 2000); // Change image every 2 seconds
+  setTimeout(showSlides, 5000);
 }
 </script>
 <br>
