--- a/page.html
+++ b/page.html
@@ -21,7 +21,7 @@
     <h1 style="font-family:'Courier New'">Sub header</h1>
     <br></br>
     <p style="font-family:'Courier New'">This is another HTML page.</p>
-    <p style="font-family:'Courier New'">This is one paragraph.</p>
+    <p style="font-family:'Courier New'">Nothing fancy here</p>
 </article>
 </section>
 <br>
@@ -38,7 +38,7 @@
 </br>
 <footer>
 <p>This is a fake website, so please treat it as such. DO NOT put in any information that you do not want publicly viewable. The creators of this website are not responsible for any breached data.</p>
-<br><pr></pr></br>
+<br><pr>Most of the code for this webpage is backend. I am aware that it looks like something out of the 90's.</pr></br>
 <p>Copyright © 2022-2023 Tapp Studios. Most Rights reserved.</p>
 </footer>
 </body>
