--- a/index.html
+++ b/index.html
@@ -21,13 +21,20 @@
     </ul>
 </nav>
 <article>
-    <h1 style="font-family:'Courier New'">Subheader</h1>
-    <br></br>
-    <p style="font-family:'Courier New'">This is an example of a simple HTML page with one paragraph.</p>
-    <p style="font-family:'Courier New'">This is a second paragraph.</p>
+    <p style="font-family:'Courier New' align:'center'">This where some text about us will be eventually. There's nothing here yet, because I still have no clue what the purpose of this website will be.</p>
     <p></p>
 </article>
 </section>
+<section class="recentNews">
+  <div class="container">
+    <h2 class="news-title">Recent News</h2>
+    <div class="row">
+      <div class="ct-blog col-sm-6 col-md-4">
+        <div class="inner">
+          <div class="fauxcrop">
+            <a href="#"><img alt="News Entry" src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg"></a>
+          </div>
+          <div class="ct-blog-content">
 <br>
     <p>
     </p>
