--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <a href="#"><img alt="News Entry" src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg"></a>
           </div>
           <div class="ct-blog-content">
+</section>
 <br>
     <p>
     </p>
