--- a/index.html
+++ b/index.html
@@ -25,17 +25,6 @@
     <p></p>
 </article>
 </section>
-<section class="recentNews">
-  <div class="container">
-    <h2 class="news-title">Recent News</h2>
-    <div class="row">
-      <div class="ct-blog col-sm-6 col-md-4">
-        <div class="inner">
-          <div class="fauxcrop">
-            <a href="#"><img alt="News Entry" src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg"></a>
-          </div>
-          <div class="ct-blog-content">
-</section>
 <br>
     <p>
     </p>
@@ -46,32 +35,33 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 6</div>
-    <img src="Images/0001.jpg" style="width:100%">
+    <img src="Images/0001.jpg" style="width:20%">
+    <a href="tapp-studios.github.io/articles/test.html" style="color:'white'">link text</a>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 6</div>
-    <img src="Images/0003.jpg" style="width:100%">
+    <img src="Images/0003.jpg" style="width:20%">
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 6</div>
-    <img src="Images/Canyon.jpg" style="width:100%">
+    <img src="Images/Canyon.jpg" style="width:20%">
   </div>
    
   <div class="mySlides fade">
     <div class="numbertext">4 / 6</div>
-    <img src="Images/Converse.jpg" style="width:100%">
+    <img src="Images/Converse.jpg" style="width:20%">
   </div>
     
   <div class="mySlides fade">
     <div class="numbertext">5 / 6</div>
-    <img src="Images/Space.jpg" style="width:100%">
+    <img src="Images/Space.jpg" style="width:20%">
   </div>
     
   <div class="mySlides fade">
     <div class="numbertext">6 / 6</div>
-    <img src="Images/Temple.jpg" style="width:100%">
+    <img src="Images/Temple.jpg" style="width:20%">
   </div>
 
   <!-- Next and previous buttons -->
