--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="mySlides fade">
     <div class="numbertext">1 / 6</div>
     <img src="Images/0001.jpg" style="width:20%">
-    <a href="tapp-studios.github.io/articles/test.html" style="color:'white'">link text</a>
+    <a href="articles/test.html">link text</a>
   </div>
 
   <div class="mySlides fade">
