--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 </article>
 </section>
     <br></br>
-<section class="recentNews">
+<section>
   <div class="container">
-    <h2 class="news-title">Recent News</h2>
     <div class="row">
       <div class="ct-blog col-sm-6 col-md-4">
         <div class="inner">
@@ -36,9 +35,6 @@
             <a href="#"><img alt="News Entry" src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg"></a>
           </div>
           <div class="ct-blog-content">
-            <div class="ct-blog-date">
-              <span>March</span><strong>1</strong>
-            </div>
             <h3 class="ct-blog-header">
               WebCorpCo Will Be Visiting a Number of Upcoming Conferences
             </h3>
