--- a/index.html
+++ b/index.html
@@ -28,34 +28,13 @@
     <br></br>
 <section>
   <div class="container">
-    <div class="row">
-      <div class="ct-blog col-sm-6 col-md-4">
-        <div class="inner">
-          <div class="fauxcrop">
             <a href="#"><img alt="News Entry" src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg"></a>
           </div>
           <div class="ct-blog-content">
             <h3 class="ct-blog-header">
-              WebCorpCo Will Be Visiting a Number of Upcoming Conferences
+              News Entry No.1
             </h3>
-          </div>
-        </div>
       </div>
-      <div class="ct-blog col-sm-6 col-md-4">
-        <div class="inner">
-          <div class="fauxcrop">
-            <a href="#"><img alt="News Entry" src="https://www.solodev.com/assets/recent-news/news-entry-2.jpg"></a>
-          </div>
-            <h3 class="ct-blog-header">
-              WebCorpCo Has Been Named to Inc. 5000
-            </h3>
-          </div>
-        </div>
-      </div>
-    <div class="btn-news btn-contests">
-      <a href="#">VIEW ALL NEWS</a>
-    </div>
-  </div>
 </section>
 <br>
     <p>
