--- a/index.html
+++ b/index.html
@@ -28,13 +28,9 @@
     <br></br>
 <section>
   <div class="container">
-            <a href="#"><img alt="News Entry" src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg"></a>
+            <a href="articles/test.html"><img alt="News Entry" src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg"></a>
           </div>
-          <div class="ct-blog-content">
-            <h3 class="ct-blog-header">
-              News Entry No.1
-            </h3>
-      </div>
+            <a href="articles/test.html"><h1>News Entry No.1</h1></a>
 </section>
 <br>
     <p>
@@ -47,7 +43,6 @@
   <div class="mySlides fade">
     <div class="numbertext">1 / 6</div>
     <img src="Images/0001.jpg" style="width:20%">
-    <a href="articles/test.html">link text</a>
   </div>
 
   <div class="mySlides fade">
