--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <br></br>
 <section>
   <div class="container">
-        <a href="articles/test.html"><img alt="News Entry" src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg"></a>
-        <a href="articles/test.html"><h1>News Entry No.1</h1></a>
+        <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg"></a>
+        <a href="articles/test.html" style="align:'center' font-color:'white'"><h1>News Entry No.1</h1></a>
  </div>
 </section>
 <br>
