--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
         <a href="articles/test.html" style="align:'center' color:white;"><h1>News Entry No.1</h1></a>
  </div>
+ <div class="container">
+        <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
+        <a href="articles/test.html" style="text-align:center; color:white;"><h1>News Entry No.2</h1></a>
+ </div>
 </section>
 <br>
     <p>
