--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section>
   <div class="container">
         <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
-        <a href="articles/test.html" style="align:'center' color:white;"><h1>News Entry No.1</h1></a>
+        <a href="articles/test.html" style="text-align:center; color:white;"><h1>News Entry No.1</h1></a>
  </div>
  <div class="container">
         <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
