--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </section>
 <section>
   <div class="container">
-        <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
+        <a href="articles/AI-Made-This-Song.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
         <a href="articles/test.html" style="text-align:center; color:white;"><h1>AI Created This Song</h1></a>
  </div>
  <div class="container">
