--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p></p>
 </article>
 </section>
-<section>
+<section style="align:center;">
   <div class="container">
         <a href="articles/AI-Made-This-Song.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
         <a href="articles/test.html" style="text-align:center; color:white;"><h1>AI Created This Song</h1></a>
