--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="header">
-    <img src="logo.png">
+    <img src="logo.png" width="50" height="50">
     <h2>Tapp Studios</h2>
 </div>
 <section>
