Updated website design

--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-<div class="header">
-    <nav>
+  <nav>
     <ul>
-      <li style="font-family:'Courier New'" align="center"><a href="#">Home</a></li>
-      <li style="font-family:'Courier New'" align="center"><a href="page.html">Page</a></li>
-      <li style="font-family:'Courier New'" align="center"><a href="Login.html">Login</a></li>
-      <li style="font-family:'Courier New'" align="center"><a href="Register.html">Register</a></li>
+      <li style="font-family:'Courier New'" align="center"><a href="#">Home  </a></li>
+      <li style="font-family:'Courier New'" align="center"><a href="page.html">Page  </a></li>
+      <li style="font-family:'Courier New'" align="center"><a href="Login.html">Login  </a></li>
+      <li style="font-family:'Courier New'" align="center"><a href="Register.html">Register  </a></li>
     </ul>
+  </nav>
+<div class="header">
     <img src="logo.png" width="25" height="25">
     <h2>Tapp Studios</h2>
-</nav>
 </div>
-<section>
+<section class="news">
 <article>
-    <p style="font-family:'Courier New' align:'center'">This where some text about us will be eventually. There's nothing here yet, because I still have no clue what the purpose of this website will be.</p>
+    <p style="font-family:Courier New; text-align:center;">This where some text about us will be eventually. There's nothing here yet, because I still have no clue what the purpose of this website will be.</p>
     <p></p>
 </article>
 </section>
-<section style="align:center;">
+<section style="text-align:center;">
   <div class="container">
         <a href="articles/AI-Made-This-Song.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
         <a href="articles/AI-Made-This-Song.html" style="text-align:center; color:white;"><h1>AI Created This Song</h1></a>
