--- a/index.html
+++ b/index.html
@@ -25,24 +25,19 @@
     <p></p>
 </article>
 </section>
-<section style="text-align:center;">
+<div class="news" style="text-align:center;">
   <div class="container">
-        <a href="articles/AI-Made-This-Song.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
+        <a href="articles/AI-Made-This-Song.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:300px;"></a>
         <a href="articles/AI-Made-This-Song.html" style="text-align:center; color:white;"><h1>AI Created This Song</h1></a>
  </div>
  <div class="container">
-        <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
+        <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:300px;"></a>
         <a href="articles/test.html" style="text-align:center; color:white;"><h1>This Is Just A Test</h1></a>
  </div>
  <div class="container">
-        <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
+        <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:300px;"></a>
         <a href="articles/test.html" style="text-align:center; color:white;"><h1>This Is Just A Filler</h1></a>
  </div>
- <div class="container">
-        <a href="articles/test.html"><img src="https://www.solodev.com/assets/recent-news/news-entry-1.jpg" style="width:200px;"></a>
-        <a href="articles/test.html" style="text-align:center; color:white;"><h1>I'm A Placeholder!</h1></a>
- </div>
-</section>
 <br>
     <p>
     </p>
