--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 <section class="news">
 <article>
-    <p style="font-family:Courier New; text-align:center;">This where some text about us will be eventually. There's nothing here yet, because I still have no clue what the purpose of this website will be.</p>
+    <p style="font-family:Courier New; text-align:center;">This where some stuff about us will be eventually. There's nothing here yet, because I still have no clue what the purpose of this website will be.</p>
     <p></p>
 </article>
 </section>
