--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </section>
 <div class="news" style="text-align:center;">
   <div class="container">
-        <a href="articles/AI-Made-This-Song.html"><img src="images/00018-4039531853.png" style="width:300px;"></a>
+        <a href="articles/AI-Made-This-Song.html"><img src="Images/00018-4039531853.png" style="width:300px;"></a>
         <a href="articles/AI-Made-This-Song.html" style="text-align:center; color:white;"><h1>AI Created This Song</h1></a>
  </div>
  <div class="container">
