--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     </ul>
   </nav>
 <div class="header">
+  <header>
     <img src="logo.png" width="25" height="25">
     <h2>Tapp Studios</h2>
+  </header>
 </div>
-<section class="news">
 <article>
     <p style="font-family:Courier New; text-align:center;">This where some stuff about us will be eventually. There's nothing here yet, because I still have no clue what the purpose of this website will be.</p>
     <p></p>
 </article>
-</section>
 <div class="news" style="text-align:center;">
   <div class="container">
         <a href="articles/AI-Made-This-Song.html"><img src="Images/00018-4039531853.png" style="width:300px;"></a>
