--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style.css">
 </head>
-<body>
   <nav>
     <ul>
       <li style="font-family:'Courier New'" align="center"><a href="#">Home</a></li>
@@ -15,11 +14,13 @@
       <li style="font-family:'Courier New'" align="center"><a href="Register.html">Register</a></li>
     </ul>
   </nav>
-
+<body>
+<div class="header">
   <header>
     <img src="logo.png" width="25" height="25">
     <h2>Tapp Studios</h2>
   </header>
+</div>
 <article>
     <p style="font-family:Courier New; text-align:center;">This where some stuff about us will be eventually. There's nothing here yet, because I still have no clue what the purpose of this website will be.</p>
     <p></p>
