--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </nav>
 <div class="header">
   <header>
-    <img class="avatar" src="logo.png" width="35" height="35">
+    <img src="logo.png" width="35" height="35">
     <h2>Tapp Studios</h2>
   </header>
 </div>
