--- a/index.html
+++ b/index.html
@@ -48,32 +48,32 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
     <div class="numbertext">1 / 6</div>
-    <img src="Images/0001.jpg" style="width:100%">
+    <img src="Images/0001.jpg" style="width:100%; height:100%">
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 6</div>
-    <img src="Images/0003.jpg" style="width:100%">
+    <img src="Images/0003.jpg" style="width:100%; height:100%">
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 6</div>
-    <img src="Images/Canyon.jpg" style="width:100%">
+    <img src="Images/Canyon.jpg" style="width:100%; height:100%">
   </div>
    
   <div class="mySlides fade">
     <div class="numbertext">4 / 6</div>
-    <img src="Images/Converse.jpg" style="width:100%">
+    <img src="Images/Converse.jpg" style="width:100%; height:100%">
   </div>
     
   <div class="mySlides fade">
     <div class="numbertext">5 / 6</div>
-    <img src="Images/Space.jpg" style="width:100%">
+    <img src="Images/Space.jpg" style="width:100%; height:100%">
   </div>
     
   <div class="mySlides fade">
     <div class="numbertext">6 / 6</div>
-    <img src="Images/Temple.jpg" style="width:100%">
+    <img src="Images/Temple.jpg" style="width:100%; height:100%">
   </div>
 
   <!-- Next and previous buttons -->
