--- a/page.html
+++ b/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Tapp Studios - Page</title>
+    <title>Tapp Studios</title>
     <link rel="icon" type="image/x-icon" href="logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style.css">
@@ -17,12 +17,12 @@
   </nav>
 <div class="header">
   <header>
-    <img class="avatar" src="logo.png" width="35" height="35">
+    <img class="avatar" src="logo.png">
     <h2>Tapp Studios</h2>
   </header>
 </div>
 <article>
-    <p style="font-family:Courier New; text-align:center;">Look at me! I'm a page!</p>
+    <p style="font-family:Courier New; text-align:center;">This where some stuff about us will be eventually. There's nothing here yet, because I still have no clue what the purpose of this website will be.</p>
     <p></p>
 </article>
 <br>
