--- a/page.html
+++ b/page.html
@@ -9,7 +9,7 @@
 <body>
   <nav>
     <ul>
-      <li style="font-family:'Courier New'" align="center"><a href="#">Home</a></li>
+      <li style="font-family:'Courier New'" align="center"><a href="index.html">Home</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="page.html">Page</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="Login.html">Login</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="Register.html">Register</a></li>
