--- a/page.html
+++ b/page.html
@@ -17,7 +17,7 @@
   </nav>
 <div class="header">
   <header>
-    <img class="avatar" src="logo.png">
+      <a href="index.html"><img class="avatar" src="logo.png"></a>
     <h2>Tapp Studios</h2>
   </header>
 </div>
