--- a/page.html
+++ b/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Tapp Studios</title>
+    <title>Tapp Studios - Page</title>
     <link rel="icon" type="image/x-icon" href="logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style.css">
@@ -9,7 +9,7 @@
 <body>
   <nav>
     <ul>
-      <li style="font-family:'Courier New'" align="center"><a href="index.html">Home</a></li>
+      <li style="font-family:'Courier New'" align="center"><a href="#">Home</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="page.html">Page</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="Login.html">Login</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="Register.html">Register</a></li>
@@ -17,7 +17,7 @@
   </nav>
 <div class="header">
   <header>
-      <a href="index.html"><img class="avatar" src="logo.png"></a>
+    <img class="avatar" src="logo.png" width="35" height="35">
     <h2>Tapp Studios</h2>
   </header>
 </div>
@@ -25,6 +25,18 @@
     <p style="font-family:Courier New; text-align:center;">Look at me! I'm a page!</p>
     <p></p>
 </article>
+<br>
+    <p>
+    </p>
+</br>
+<br>
+    <p>
+    </p>
+</br>
+<br>
+    <p>
+    </p>
+</br>
 <br>
     <p>
     </p>
