--- a/page.html
+++ b/page.html
@@ -9,7 +9,7 @@
 <body>
   <nav>
     <ul>
-      <li style="font-family:'Courier New'" align="center"><a href="#">Home</a></li>
+      <li style="font-family:'Courier New'" align="center"><a href="index.html">Home</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="page.html">Page</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="Login.html">Login</a></li>
       <li style="font-family:'Courier New'" align="center"><a href="Register.html">Register</a></li>
@@ -17,7 +17,7 @@
   </nav>
 <div class="header">
   <header>
-    <img class="avatar" src="logo.png" width="35" height="35">
+      <a href="index.html"><img class="avatar" src="logo.png"></a>
     <h2>Tapp Studios</h2>
   </header>
 </div>
@@ -25,6 +25,18 @@
     <p style="font-family:Courier New; text-align:center;">Look at me! I'm a page!</p>
     <p></p>
 </article>
+<br>
+    <p>
+    </p>
+</br>
+<br>
+    <p>
+    </p>
+</br>
+<br>
+    <p>
+    </p>
+</br>
 <br>
     <p>
     </p>
