--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <link rel="icon" type="image/x-icon" href="logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="Style.css">
+    <script>
+      function allowDrop(ev) {
+        ev.preventDefault();
+      }
+
+      function drag(ev) {
+        ev.dataTransfer.setData("text", ev.target.id);
+      }
+
+      function drop(ev) {
+        ev.preventDefault();
+        var data = ev.dataTransfer.getData("text");
+        ev.target.appendChild(document.getElementById(data));
+      }
+  </script>
 </head>
 <body>
   <nav>
@@ -119,21 +134,12 @@ function showSlides(n) {
     dots[slideIndex-1].className += " active";
   }
 </script>
+<div ondrop="drop(event)" ondragover="allowDrop(event)"><br><br><br><br><br><br></div>
 <br>
-    <p>
-    </p>
-</br>
-<br>
-    <p>
-    </p>
-</br>
-<br>
-    <p>
-    </p>
-</br>
-<footer>
+<div class="hidden"><a href="#"><button>Click Me</button></a></div>
+<footer id="drag1" draggable="true" ondragstart="drag(event)">
 <p>This is a fake website, so please treat it as such. DO NOT put in any information that you do not want publicly viewable. The creators of this website are not responsible for any breached data.</p>
-<br><pr>Most of the code for this webpage is backend. I am aware that it looks like something out of the 90's.</pr></br>
+<br><p>Most of the code for this webpage is backend. I am aware that it looks like something out of the 90's.</p>
 <p>Copyright © 2022-2023 Tapp Studios. Most Rights reserved.</p>
 </footer>
 </body>
