--- a/page.html
+++ b/page.html
@@ -26,44 +26,24 @@
     <p></p>
 </article>
 <br>
-    <p>
-    </p>
-</br>
 <br>
-    <p>
-    </p>
-</br>
 <br>
-    <p>
-    </p>
-</br>
 <br>
-    <p>
-    </p>
-</br>
 <br>
-    <p>
-    </p>
-</br>
 <br>
-    <p>
-    </p>
-</br>
 <br>
-    <p>
-    </p>
-</br>
 <br>
-    <p>
-    </p>
-</br>
 <br>
-    <p>
-    </p>
-</br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <footer>
 <p>This is a fake website, so please treat it as such. DO NOT put in any information that you do not want publicly viewable. The creators of this website are not responsible for any breached data.</p>
-<br><pr>Most of the code for this webpage is backend. I am aware that it looks like something out of the 90's.</pr></br>
+<br><p>Most of the code for this webpage is backend. I am aware that it looks like something out of the 90's.</p>
 <p>Copyright © 2022-2023 Tapp Studios. Most Rights reserved.</p>
 </footer>
 </body>
