--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ function showSlides(n) {
 </script>
 <div ondrop="drop(event)" ondragover="allowDrop(event)"><br><br><br><br><br><br></div>
 <br>
-<div class="hidden"><a href="congratulations.html"><button>Click Me</button></a></div>
+<div class="hidden"><a href=".vscode/congratulations.html"><button>Click Me</button></a></div>
 <footer id="drag1" draggable="true" ondragstart="drag(event)">
 <p>This is a website in developement, so please treat it as such. DO NOT put in any information that you do not want publicly viewable. The creators of this website are not responsible for any breached data.</p>
 <br><p>Most of the code for this webpage is backend. I am aware that it looks like something out of the 90's.</p>
