--- a/vscode/congratulations.html
+++ b/vscode/congratulations.html
@@ -4,7 +4,7 @@
     <title>Congratulations</title>
     <link rel="icon" type="image/x-icon" href="logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="../Style.css">
 </head>
 <body>
   <nav>
